--- a/main.html
+++ b/main.html
@@ -4,10 +4,71 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		.hero {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.hero-image {
+  flex: 1;
+  overflow: hidden;
+}
+
+.hero-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.hero-content {
+  flex: 0 0 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 2rem;
+  background-color: white;
+}
+
+h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+p {
+  font-size: 1rem;
+  margin-bottom: 2rem;
+}
+
+.explore-button {
+  display: inline-block;
+  padding: 0.75rem 1.5rem;
+  background-color: #e60023;
+  color: white;
+  text-decoration: none;
+  border-radius: 24px;
+  font-weight: bold;
+  text-align: center;
+  max-width: 150px;
+}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="hero">
+  <div class="hero-image">
+    <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Mountain lake with pine trees">
+  </div>
+  <div class="hero-content">
+    <h1>Welcome to my Pinterest clone</h1>
+    <p>Discover new inspiration and save your favorite ideas</p>
+    <a href="#" class="explore-button">Explore now</a>
+  </div>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
